changed margin top of pages from using dvh to vh to fix jumpy scrolling on mobile; added menutwo page to experiment; will remove

--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/partials/variables.scss" as *;
 
 .about {
-  margin-top: calc(-100dvh + 4rem);
+  margin-top: calc(-100vh + 4rem);
   
   @media(min-width: 768px) {
     margin-top: 0;
