--- a/src/components/Pages/Booking/Booking.scss
+++ b/src/components/Pages/Booking/Booking.scss
@@ -1,8 +1,7 @@
 @use "../../../styles/partials/variables.scss" as *;
 
 .booking {
-  margin-top: calc(-100dvh + 4rem);
-  // max-width: 1280px;
+  margin-top: calc(-100vh + 4rem);
   
   @media(min-width: 768px) {
     margin-top: 0;
